# approximation

./: .gitignore  README.md  approximation.cabal  package.yaml  tree-set.cabal
.github/workflows/: runtests
app/: Main.hs
src/: Approximation.hs  Cli.hs  Generator.hs  Runner.hs
test/: ApproximationTest.hs  test.py  test1  test1_output  test2  test2_output_lagr  test2_output_lin
test/data/: test1_output  test1_output_lagr  test2_output_lagr  test2_output_lin
