cabal-version:      2.4
name:               approximation
version:            0.1.0.0
maintainer:         glinskikh.roman@yandex.ru
author:             Roman Glinskikh
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Approximation
        Cli
        Runner
        Generator

    hs-source-dirs:   src
    other-modules:    Paths_approximation
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.7 && <5,
        text,
        cmdargs

executable approximation-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_approximation
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        approximation,
        text

test-suite approximation-test
    type:             exitcode-stdio-1.0
    main-is:          ApproximationTest.hs
    hs-source-dirs:   test
    other-modules:    Paths_approximation
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        QuickCheck,
        HUnit,
        base >=4.7 && <5,
        approximation
